# AsistenteVirtual

./: LICENSE.txt  README.md  chat_lc_log_20250820-203615.json  chat_lc_log_20250820-205155.json  chat_lc_log_20250821-102247.json  pyproject.toml
app/: chat_cli_lc.py  database.py  graph.py  graph_lc.py  lc_llm.py  llm_doctor.py  main.py  models.py  repo_finanzas_db.py  router.py  state.py
app/agents/: intent.py  registry.py  tools.py
app/configs/: logging.yaml  personalities_loader.py  personas.yaml
app/dates/: period_resolver.py
app/exports/: result_20250903-092439.json  result_20251021-131348.json  result_20251104-122129.json
app/intent/: engine.py
app/schemas/: aaav_cxc_schema.json  aaav_cxp_schema.json  aav_contable_pack_schema.json
app/tools/: calc_kpis.py  (+4 more)
asistente_virtual/: pyproject.toml
asistente_virtual.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
asistente_virtual/app/: llm.py  main.py  state.py
asistente_virtual/app/agents/: base.py  registry.py
asistente_virtual/app/agents/aaav_cxc/: logic.py  prompt.md
asistente_virtual/app/agents/aav_contable/: logic.py  prompt.md
asistente_virtual/app/agents/av_administrativo/: logic.py
asistente_virtual/app/agents/av_operaciones/: logic.py  prompt.md
asistente_virtual/app/configs/: settings.yaml
asistente_virtual/app/tools/: fuzzy.py
asistente_virtual/app/workflows/: cierre_mensual.md
asistente_virtual/asistente_virtual.egg-info/: PKG-INFO  requires.txt
asistente_virtual/data/cxc/: invoices.xlsx
logs/: chat_lc_log_20250821-120614.json
test/: llm_doctor.py  smoke_finanzas.py
(+16 files in other folders)
